@@ -203,6 +203,9 @@ function delete_product_option(id)
 	<ul>
 		<li><a href="#gc_product_info"><?php echo lang('description');?></a></li>
 		<li><a href="#gc_product_attributes"><?php echo lang('attributes');?></a></li>
+		<?php if($this->config->item('inventory_enabled')) : ?>
+		<li><a href="#gc_product_inventory"><?php echo lang('inventory');?></a></li>
+		<?php endif; ?>
 		<li><a href="#gc_product_categories"><?php echo lang('categories');?></a></li>
 		<li><a href="#gc_product_downloads"><?php echo lang('digital_content');?></a></li>
 		<li><a href="#gc_product_seo"><?php echo lang('seo');?></a></li>
@@ -266,6 +269,7 @@ function delete_product_option(id)
 		echo form_input($data);
 		?>
 		</div>
+		<?php if( ! $this->config->item('inventory_enabled')) : ?>
         <div class="gc_field2">
 		<label for="slug"><?php echo lang('in_stock');?> </label>
 		<?php
@@ -276,7 +280,8 @@ function delete_product_option(id)
 
 			echo form_dropdown('in_stock', $options, set_value('in_stock',$in_stock));
 		?>
-		</div>		
+		</div>
+		<?php endif; ?>	
 		<div class="gc_field2">
 		<label for="slug"><?php echo lang('shippable');?> </label>
 		<?php
@@ -286,6 +291,17 @@ function delete_product_option(id)
                 );
 
 			echo form_dropdown('shippable', $options, set_value('shippable',$shippable));
+		?>
+		</div>
+		<div class="gc_field2">
+		<label for="slug"><?php echo lang('taxable');?> </label>
+		<?php
+		 	$options = array(
+                  '1'  => lang('yes'),
+                  '0'    => lang('no')
+                );
+
+			echo form_dropdown('taxable', $options, set_value('taxable',$taxable));
 		?>
 		</div>
 		<div class="gc_field2">
@@ -320,6 +336,55 @@ function delete_product_option(id)
       
 		</div>
 	</div>
+	<?php if($this->config->item('inventory_enabled')) : ?>
+	
+	<div id="gc_product_inventory">
+		<?php if ( isset($AvailableQTY) ): ?>
+		<p class="strong"><?php echo lang('avbl_qty') .': ' . $AvailableQTY; ?></p>
+		<?php endif; ?>
+		<div class="gc_field2">
+		<?php
+		$data = array( 'id' => 'inventory_qty', 'name' => 'iqty', 'class'=>'gc_tf2' );
+		echo form_label('Inventory QTY', 'inventory_qty' );
+		echo form_input($data);
+		?>
+		</div>
+		<div class="gc_field2">
+		<?php
+		$data = array( 'id' => 'inventory_cost', 'name' => 'icost', 'class'=>'gc_tf2' );
+		echo form_label('Cost per item', 'inventory_cost' );
+		echo form_input($data);
+		?>
+		</div>
+		<div class="gc_field">
+		<table class="gc_table" cellspacing="0" cellpadding="0">
+		<thead>
+		<tr>
+		<th class="gc_cell_left"><?php echo lang('quantity') ?></th>
+		<th><?php echo lang('cost_per_item') ?></th>
+		<th class="gc_cell_right"><?php echo lang('date') ?></th>
+		</tr>
+		</thead>
+		<tbody>
+		<?php if ( isset($Inventories) && $Inventories !== FALSE ): ?>
+		<?php foreach( $Inventories as $Inventory ): ?>
+		<tr>
+		<td><?php echo $Inventory->qty; ?></td>
+		<td><?php echo $Inventory->cost; ?></td>
+		<td><?php echo $Inventory->date; ?></td>
+		</tr>
+		<?php endforeach; ?>
+		<?php else: ?>
+		<tr>
+		<td colspan="3"><?php echo lang('no_inv') ?></td>
+		</tr>
+		<?php endif; ?>
+		</tbody>
+		</table>
+		</div>
+	</div>
+	<?php endif; ?>
+		 
 	<div id="gc_product_categories">
 		<table class="gc_table" cellspacing="0" cellpadding="0">
 		    <thead>
